--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,6 +9,7 @@ rule_files:
 
 scrape_configs:
   - job_name: 'jenkins'
+    metrics_path: /prometheus/
     scrape_interval: 5s
     static_configs:
       - targets: ['54.197.203.15:8080']
